Hooked up the ProductsController for getting all products.

--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,9 +1,8 @@
-@using System.Web.Http
-@using UnityAopSpike.Web.Areas.HelpPage.Models
-@model HelpPageApiModel
+@using System.Web.Http.Description
+@model UnityAopSpike.Web.Areas.HelpPage.Models.HelpPageApiModel
 
 @{
-    var description = Model.ApiDescription;
+    ApiDescription description = Model.ApiDescription;
     ViewBag.Title = description.HttpMethod.Method + " " + description.RelativePath;
 }
 
