--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions
-@model ComplexTypeModelDescription
+@model UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions.ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
