--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,5 +1,4 @@
-@using UnityAopSpike.Web.Areas.HelpPage
-@model InvalidSample
+@model UnityAopSpike.Web.Areas.HelpPage.InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
