--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions
-@model SimpleTypeModelDescription
+@model UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions.SimpleTypeModelDescription
 @Model.Documentation
