--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,5 +1,4 @@
-@using UnityAopSpike.Web.Areas.HelpPage
-@model TextSample
+@model UnityAopSpike.Web.Areas.HelpPage.TextSample
 
 <pre class="wrapped">
 @Model.Text
