--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,5 +1,5 @@
 @using UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions
-@model CollectionModelDescription
+@model UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions.CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
     @Html.DisplayFor(m => m.ElementDescription)
