--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,5 +1,5 @@
 @using UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions
-@model EnumTypeModelDescription
+@model UnityAopSpike.Web.Areas.HelpPage.ModelDescriptions.EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
 
