--- a/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,3 @@
-@using UnityAopSpike.Web.Areas.HelpPage
-@model ImageSample
+@model UnityAopSpike.Web.Areas.HelpPage.ImageSample
 
 <img src="@Model.Src" />
