Hooking up AngularJS app.

--- a/UnityAopSpike/UnityAopSpike.Web/Views/Shared/_Layout.cshtml
+++ b/UnityAopSpike/UnityAopSpike.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
-<body ng-app='UnityAop'>
+<body ng-app="UnityAop">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -20,14 +20,16 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    <li><a href="#products">Products</a></li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        <div>
+            @RenderBody()
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Red Wing Shoes, Inc.</p>
@@ -38,6 +40,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angularjs")
     @Scripts.Render("~/bundles/angularjs-ui")
+    @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", false)
 </body>
 </html>
